adding empty folders

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ __pycache__/
 weights/
 
 # LNDb
-lndb/data/
-lndb/folds/
-lndb/mask_cubes/
-lndb/masks/
-lndb/scan_cubes/
-lndb/submission/
-lndb/trainset_csv/
+lndb/data/**
+lndb/folds/**
+lndb/mask_cubes/**
+lndb/masks/**
+lndb/scan_cubes/**
+lndb/submission/**
+lndb/trainset_csv/**
+
+!/lndb/**/.gitkeep
