--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@ lndb/scan_cubes/**
 lndb/submission/**
 lndb/trainset_csv/**
 lndb/descriptors/**
+results/**
 
 !/lndb/**/.gitkeep
+!/results/.gitkeep
